--- a/package.json
+++ b/package.json
@@ -23,18 +23,25 @@
     "expo-blur": "~15.0.8",
     "expo-clipboard": "~8.0.8",
     "expo-crypto": "^15.0.8",
+    "expo-dev-client": "~6.0.20",
+    "expo-device": "^8.0.10",
     "expo-font": "^14.0.10",
+    "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "^15.0.8",
+    "expo-notifications": "^0.32.15",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "^15.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
+    "react-native-gesture-handler": "^2.30.0",
+    "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.18.0",
-    "react-native-svg": "^15.15.1",
+    "react-native-screens": "^4.16.0",
+    "react-native-svg": "^15.12.1",
     "react-native-web": "^0.21.2",
+    "react-native-worklets": "^0.7.1",
     "zustand": "4.5.2"
   },
   "devDependencies": {
